# rust_wgpu

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  index.html  package.json  run.sh  rust_wgpu.d.ts  rust_wgpu.js  rust_wgpu_bg.wasm  rust_wgpu_bg.wasm.d.ts
.github/workflows/: build.yml  release.yml
rust/: Cargo.toml  bacon.toml
rust/src/: color_shader.wgsl  lib.rs  texture.rs
rust_wgpu/: Cargo.toml  index.html
src/: color_shader.wgsl  lib.rs  main.rs  shader.wgsl
web/: index.html  package-lock.json
